--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
     </div>
-
+    <h3>High Score </h3>
   </main>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
